--- a/css/form.css
+++ b/css/form.css
@@ -3,15 +3,16 @@
     padding: 15px;
     width: 60%;
     border-radius: 10px; /* 角を丸くする */
-    background-color: aliceblue;
+    background-color: white;
     text-align: center;
     margin-left:auto;
     margin-right:auto;
 }
 
 label{
-    border: solid 2px black;
+    border: solid 1px black;
     border-radius: 10px;
+    padding: 10px;
 }
 
 /*
